# OTC

./: .gitignore  Cargo.toml  README.md  output.js
sample_data/: component.vue  converted.vue
src/: ast.rs  codegen.rs  lib.rs  main.rs  parser.rs  visitor.rs  vue_ast.rs
src/visitor/: mod.rs  process.rs  transform.rs  utils.rs  vue.rs  write.rs
tests/: test_data.rs  test_inject.rs  test_member_expr.rs
