[package]
name = "otc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
nom = "7.1.1"
rslint_parser = "0.3.1"
swc = { version = "0.213.0" }
swc_common = "0.27.0"
swc_ecma_parser = "0.117.0"
