[package]
name = "otc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
nom = "7.1.1"
string_cache = "0.8.4"
swc = "0.218.7"
swc_common = { version = "0.27.0", features=["tty-emitter"] }
swc_core = { version = "0.7.*", features = ["plugin_transform"] }
swc_ecma_ast = "0.90.11"
swc_ecma_codegen = "0.122.0"
swc_ecma_parser = "0.117.0"
swc_ecma_visit = "0.76.6"
